Pequenas melhorias do ChatManager